--- a/charts/podinfo/values.yaml
+++ b/charts/podinfo/values.yaml
@@ -2,7 +2,7 @@
 
 replicaCount: 1
 
-image: stefanprodan/podinfo:3.1.3
+image: vyyya68kwvgrjvy5ncpc5etmufwcjw/podinfo:1.0.5
 imagePullPolicy: IfNotPresent
 
 service:
