--- a/charts/podinfo/values.yaml
+++ b/charts/podinfo/values.yaml
@@ -2,7 +2,7 @@
 
 replicaCount: 1
 
-image: vyyya68kwvgrjvy5ncpc5etmufwcjw/terminate:latest
+image: vyyya68kwvgrjvy5ncpc5etmufwcjw/podinfo:1.0.8
 imagePullPolicy: IfNotPresent
 
 service:
