--- a/charts/podinfo/Chart.yaml
+++ b/charts/podinfo/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 appVersion: "3.1.6"
 description: Podinfo Helm chart for Kubernetes
-name: podinfo
+name: podinfo-alt
 version: 1.0.0
 home: https://github.com/samer-shami/podinfo
 sources:
